working group and userscope

--- a/tests/integration/timer/index.html
+++ b/tests/integration/timer/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,77 +15,106 @@
             padding: 30px 0;
             border-top: 1px dotted silver;
         }
+        
         .instructions {
             color: blue;
         }
     </style>
 </head>
+
 <body class="container">
     <section class="jumbotron">
-      <div class="row">
-          <div class="col-xs-6">
-              <form action="">
-                <label for="">Account</label>
-                <input type="text" id="txtAccount"  value="team-naren">
-                <br/>
+        <div class="row">
+            <div class="col-xs-6">
+                <form action="">
+                    <label for="">Account</label>
+                    <input type="text" id="txtAccount" value="team-naren">
+                    <br/>
 
-                <label for="">Project</label>
-                <input type="text" id="txtProject" value="multiplayer-test" >
-                <br/>
+                    <label for="">Project</label>
+                    <input type="text" id="txtProject" value="multiplayer-test">
+                    <br/>
 
-                <label for="">Username</label>
-                <input type="text" id="txtUsername" value="n1" >
-                <br/>
+                    <label for="">Username</label>
+                    <input type="text" id="txtUsername" value="n1">
+                    <br/>
 
-                <label for="">Password</label>
-                <input type="text" id="txtPassword" value="password1" >
-                <br/>
+                    <label for="">Password</label>
+                    <input type="text" id="txtPassword" value="password1">
+                    <br/>
 
-                <label for="">Model</label>
-                <input type="text" id="txtModel" value="bikes-multiplayer.xlsx" >
-                <br/>
+                    <label for="">Model</label>
+                    <input type="text" id="txtModel" value="bikes-multiplayer.xlsx">
+                    <br/>
 
-                <label for="">Server</label>
-                <input type="text" id="txtServer" value="" />
+                    <label for="">Server</label>
+                    <input type="text" id="txtServer" value="" />
 
-                <button id="btnLogin"> Login </button>
-                <a href="#" id='logout'> Logout</a>
-              </form>
-          </div>
-          <div class="col-xs-6">
-              Instructions here
-          </div>
-      </div>
+                    <button id="btnLogin"> Login </button>
+                    <a href="#" id='logout'> Logout</a>
+                </form>
+            </div>
+            <div class="col-xs-6">
+                Instructions here
+            </div>
+        </div>
     </section>
     <section data-scope="group">
-      <h3>Group Scope</h3>
-      <div class="row">
-          <div class="col-xs-4">
-              <div class="form">
-                  <div class="form-group">
-                       <label for="txtTimeLimit">Time limit (minutes)</label>
-                       <input type="text" class="form-control time-limit" value="2" />
-                   </div>
-                   <button class="btn btn-primary btn-create">Create timer</button>
-                   <button class="btn btn-delete">Delete</button>
-              </div>
-          </div>
-          <div class="col-xs-8">
-              <strong>Time left</strong>
-              <h5 id="mins"></h5>:
-              <h5 id="seconds"></h5>
-              <div>
-                <button class="btnstart">Start</button>
-                <button class="btnpause">Pause</button>
-                <button class="btnresume">Resume</button>
-                <button class="btnUpdateTime">Update</button>
-              </div>
-          </div>
-      </div>
+        <h3>Group Scope</h3>
+        <div class="row">
+            <div class="col-xs-4">
+                <div class="form">
+                    <div class="form-group">
+                        <label for="txtTimeLimit">Time limit (minutes)</label>
+                        <input type="text" class="form-control time-limit" value="2" />
+                    </div>
+                    <button class="btn btn-primary btn-create">Create timer</button>
+                    <button class="btn btn-delete">Delete</button>
+                </div>
+            </div>
+            <div class="col-xs-8">
+                <strong>Time left</strong>
+                <h5 class="mins"></h5>:
+                <h5 class="seconds"></h5>
+                <div>
+                    <button class="btnstart">Start</button>
+                    <button class="btnpause">Pause</button>
+                    <button class="btnresume">Resume</button>
+                    <button class="btnUpdateTime">Update</button>
+                </div>
+            </div>
+        </div>
     </section>
-    
+    <section data-scope="user">
+        <h3>USER Scope</h3>
+        <div class="row">
+            <div class="col-xs-4">
+                <div class="form">
+                    <div class="form-group">
+                        <label for="txtTimeLimit">Time limit (minutes)</label>
+                        <input type="text" class="form-control time-limit" value="2" />
+                    </div>
+                    <button class="btn btn-primary btn-create">Create timer</button>
+                    <button class="btn btn-delete">Delete</button>
+                </div>
+            </div>
+            <div class="col-xs-8">
+                <strong>Time left</strong>
+                <h5 class="mins"></h5>:
+                <h5 class="seconds"></h5>
+                <div>
+                    <button class="btnstart">Start</button>
+                    <button class="btnpause">Pause</button>
+                    <button class="btnresume">Resume</button>
+                    <button class="btnUpdateTime">Update</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <script src="../common.js"></script>
     <script src="./integration-test-timer.js"></script>
 </body>
+
 </html>
