--- a/tests/integration/multiplayer/consensus/index.html
+++ b/tests/integration/multiplayer/consensus/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,47 +15,49 @@
             padding: 30px 0;
             border-top: 1px dotted silver;
         }
+        
         .instructions {
             color: blue;
         }
     </style>
 </head>
+
 <body class="container">
     <section class="jumbotron">
-      <div class="row">
-          <div class="col-xs-6">
-              <form action="">
-                <label for="">Account</label>
-                <input type="text" id="txtAccount"  value="team-naren">
-                <br/>
+        <div class="row">
+            <div class="col-xs-6">
+                <form action="">
+                    <label for="">Account</label>
+                    <input type="text" id="txtAccount" value="team-naren">
+                    <br/>
 
-                <label for="">Project</label>
-                <input type="text" id="txtProject" value="multiplayer-test" >
-                <br/>
+                    <label for="">Project</label>
+                    <input type="text" id="txtProject" value="multiplayer-test">
+                    <br/>
 
-                <label for="">Username</label>
-                <input type="text" id="txtUsername" value="n1" >
-                <br/>
+                    <label for="">Username</label>
+                    <input type="text" id="txtUsername" value="n1">
+                    <br/>
 
-                <label for="">Password</label>
-                <input type="text" id="txtPassword" value="password1" >
-                <br/>
+                    <label for="">Password</label>
+                    <input type="text" id="txtPassword" value="password1">
+                    <br/>
 
-                <label for="">Model</label>
-                <input type="text" id="txtModel" value="bikes-multiplayer.xlsx" >
-                <br/>
+                    <label for="">Model</label>
+                    <input type="text" id="txtModel" value="bikes-multiplayer.xlsx">
+                    <br/>
 
-                <label for="">Server</label>
-                <input type="text" id="txtServer" value="test.forio.com" />
+                    <label for="">Server</label>
+                    <input type="text" id="txtServer" value="" />
 
-                <button id="btnLogin"> Login </button>
-                <a href="#" id='logout'> Logout</a>
-              </form>
-          </div>
-          <div class="col-xs-6">
-              Make sure you enter info for a multiplayer project with push channel turned on.
-          </div>
-      </div>
+                    <button id="btnLogin"> Login </button>
+                    <a href="#" id='logout'> Logout</a>
+                </form>
+            </div>
+            <div class="col-xs-6">
+                Make sure you enter info for a multiplayer project with push channel turned on.
+            </div>
+        </div>
     </section>
     <div class="row">
         <div class="col-xs-6">
@@ -85,10 +88,11 @@
             <ul id="generalWorldNotifications"></ul>
         </div>
     </div>
-   
-    
+
+
 
     <script src="../../common.js"></script>
     <script src="./integration-test-consensus.js"></script>
 </body>
+
 </html>
