--- a/tests/integration/assets/index.html
+++ b/tests/integration/assets/index.html
@@ -35,8 +35,8 @@
 </head>
 <body>
 
-    <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="../../../dist/epicenter-edge.js"></script>
+    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="/dist/epicenter-edge.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
     <div id="content" class="container">
