working runlimit test

--- a/tests/integration/settings-manager/student.html
+++ b/tests/integration/settings-manager/student.html
@@ -79,8 +79,9 @@
 
         <h5>Run Limit</h5>
         <span id="run-limit"></span>
+
     </section>
-    
+    <button id="btn-reset" class="btn btn-danger">Reset</button>
 
     <script src="../common.js"></script>
     <script src="integration-test-student-settings.js"></script>
