--- a/tests/integration/settings-manager/facilitator.html
+++ b/tests/integration/settings-manager/facilitator.html
@@ -84,6 +84,14 @@
                             <label for="">Run Name</label>
                             <input type="text" class="form-control" id="txt-run-name" name="name">
                         </div>
+                        <div class="form-group">
+                                <label for="">Run Limit</label>
+                                <select name="runLimit" id="lst-run-limit">
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="">Unlimited</option>
+                                </select>
+                            </div>
                         <div class="decision-container"></div>
                     </form>
                 </li>
