--- a/tests/integration/settings-manager/student.html
+++ b/tests/integration/settings-manager/student.html
@@ -10,6 +10,7 @@
     <script src="//forio.com/tools/js-libs/2.6.0/epicenter.js"></script> -->
 
     <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="/dist/epicenter-multiplayer-dependencies.js"></script>
     <script src="/dist/epicenter-edge.js"></script>
 
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
