--- a/tests/integration/assets/index.html
+++ b/tests/integration/assets/index.html
@@ -69,6 +69,7 @@
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
                     <button type="submit" class="btn btn-primary">Upload</button>
+                    <button id="btnGetURL" class="btn btn-primary">Get S3 URL</button>
                 </div>
             </div>
           </form>
@@ -99,14 +100,14 @@
                         <div class="form-group">
                             <label for="txtUsername" class="col-sm-2 control-label">Username</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" id="txtUsername" placeholder="Username" value="ricardo001">
+                                <input type="text" class="form-control" id="txtUsername" placeholder="Username" value="testuser1">
                             </div>
                         </div>
 
                         <div class="form-group">
                             <label for="txtPassword" class="col-sm-2 control-label">Password</label>
                             <div class="col-sm-10">
-                                <input type="password" class="form-control" id="txtPassword" placeholder="Password" value="test1234">
+                                <input type="password" class="form-control" id="txtPassword" placeholder="Password" value="testuser1">
                             </div>
                         </div>
                     </form>
