--- a/tests/integration/settings-manager/facilitator.html
+++ b/tests/integration/settings-manager/facilitator.html
@@ -113,6 +113,20 @@
             </ol>
         </section>
     </div>
+
+    <button id="btn-refresh-run-results" class="btn btn-link f-action-button">Refresh Results</button>
+
+    <table class="table" id="run-results">
+        <thead>
+            <tr>
+                <thead>User</thead>
+                <thead>RunId</thead>
+            </tr>
+        </thead>
+        <tbody>
+            
+        </tbody>
+    </table>
     
     <script src="../common.js"></script>
     <script src="integration-test-fac-settings.js"></script>
